# proxmox-init

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  deny.toml  install.sh  lefthook.yml
.github/workflows/: ncl-validate.yml  release.yml  reusable-ncl-eval.yml  security.yml  shellcheck.yml
crates/cli/: Cargo.toml  build.rs
crates/cli/src/: main.rs
crates/core/: Cargo.toml  build.rs
crates/core/assets/: services_registry.toml
crates/core/src/: brand.rs  common.rs  config.rs  convention.rs  dotenvx.rs  github.rs  helpers.rs  lib.rs  os.rs  paths.rs  registry.rs  services.rs  systemd.rs  types.rs
crates/domains/account/: Cargo.toml  domain.ncl
crates/domains/account/src/: main.rs
crates/domains/ai/: Cargo.toml  domain.ncl
crates/domains/ai/src/: main.rs
crates/domains/backup/: Cargo.toml  domain.ncl
crates/domains/backup/src/: main.rs
crates/domains/bootstrap/: Cargo.toml
crates/domains/bootstrap/src/: main.rs
crates/domains/chrome-browser-dev/: Cargo.toml  domain.ncl
crates/domains/chrome-browser-dev/scripts/: chromium-browser-dev  provision.sh  win-cross-provision.sh  win-cross-sdk
crates/domains/chrome-browser-dev/src/: main.rs
crates/domains/cloudflare/: Cargo.toml  domain.ncl
crates/domains/cloudflare/src/: main.rs
crates/domains/code-server/: Cargo.toml
crates/domains/code-server/src/: main.rs
crates/domains/comfyui/: Cargo.toml
crates/domains/comfyui/src/: main.rs
crates/domains/connect/: Cargo.toml
crates/domains/connect/src/: main.rs
crates/domains/deploy/: Cargo.toml
crates/domains/deploy/src/: main.rs
crates/domains/elk/: Cargo.toml
crates/domains/elk/src/: main.rs
crates/domains/host/: Cargo.toml  domain.ncl
crates/domains/host/src/: main.rs
crates/domains/infisical/: Cargo.toml
crates/domains/infisical/src/: main.rs
crates/domains/iso/: Cargo.toml
crates/domains/iso/src/: main.rs
crates/domains/license/: Cargo.toml
crates/domains/license/src/: main.rs
crates/domains/lxc/: Cargo.toml  domain.ncl
crates/domains/lxc/src/: main.rs
crates/domains/mail/: Cargo.toml  domain.ncl
crates/domains/mail/src/: main.rs
crates/domains/manager/: Cargo.toml
crates/domains/manager/src/: main.rs
crates/domains/ministack/: Cargo.toml
crates/domains/ministack/src/: main.rs
crates/domains/monitor/: Cargo.toml
crates/domains/monitor/src/: main.rs
crates/domains/nas/: Cargo.toml
crates/domains/nas/src/: main.rs
crates/domains/net/: Cargo.toml
crates/domains/net/src/: main.rs
crates/domains/node/: Cargo.toml
crates/domains/node/src/: main.rs
crates/domains/recovery/: Cargo.toml
crates/domains/recovery/src/: main.rs
crates/domains/service/: Cargo.toml
crates/domains/service/src/: main.rs
crates/domains/telegram/: Cargo.toml
crates/domains/telegram/src/: main.rs
crates/domains/traefik/: Cargo.toml  domain.ncl
crates/domains/traefik/src/: main.rs
crates/domains/vaultwarden/: Cargo.toml  domain.ncl
crates/domains/vaultwarden/src/: main.rs
crates/domains/vm/: Cargo.toml  domain.ncl
crates/domains/vm/src/: main.rs
crates/domains/wordpress/: Cargo.toml
crates/domains/wordpress/assets/: wp-admin-lockdown.conf
crates/domains/wordpress/src/: main.rs
crates/domains/workspace/: Cargo.toml
crates/domains/workspace/src/: main.rs
crates/domains/xdesktop/: Cargo.toml  domain.ncl
crates/domains/xdesktop/scripts/: dev-setup.sh  install-desktop.sh
crates/domains/xdesktop/src/: main.rs
docs/: compatibility.md  phs-vs-prelik.md  uninstall.md
examples/: README.md  deploy-database.md  deploy-svn.md  formbricks.md  monitor-prometheus.md
examples/recipes/: code-server.toml  formbricks.toml  infisical.toml  matterbridge.toml  ministack.toml  nginx.toml  postgres.toml  redis.toml  svn.toml  uptime-kuma.toml  wordpress.toml
lints/pxi-domain-lints/: Cargo.toml
lints/pxi-domain-lints/src/: lib.rs
ncl/: domains.ncl
ncl/policies/: architecture.ncl  repo_guard.ncl
scripts/: check_architecture.py  check_no_python_mix.sh  check_repo_guard.py  install-local.sh  new-domain.sh  rebrand.sh
scripts/tmux-topbar/: README.md  install.sh
scripts/tmux-topbar/systemd/: tmux-panes-layout.path  tmux-panes-layout.service
shell-tools/: README.md
shell-tools/share/pxi-keyword-insight/: playwright-api.service
shell-tools/share/pxi-keyword-insight/docker/: Dockerfile  playwright.config.ts  server.js
shell-tools/share/pxi-seo-monitor/: playwright-api.service  seo-schedule.service
shell-tools/share/pxi-seo-monitor/docker/: package.json  playwright.config.ts  server.js
shell-tools/share/pxi-seo-monitor/tests/: package.json  playwright.config.ts
shell-tools/share/pxi-seo-monitor/tests/specs/: seo-audit.spec.ts
tests/: smoke.sh
workers/: install-redirect.js  wrangler.toml
