[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/cli",
    "crates/domains/*",
]

[workspace.package]
version = "1.11.1"
edition = "2021"
authors = ["dalsoop"]
license = "MIT"
repository = "https://github.com/dalsoop/pxi-init"

[workspace.dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
thiserror = "2"
dirs = "5"
which = "6"
clap_complete = "4"
dialoguer = "0.12"
pxi-core = { path = "crates/core" }

[workspace.metadata.dylint]
libraries = [
    { path = "lints/pxi-domain-lints" },
]

[workspace.lints.clippy]
# pedantic 그룹 — 구조적 품질 향상 (개별 lint가 override할 수 있도록 priority=-1)
pedantic = { level = "warn", priority = -1 }
# restriction 그룹에서 pxi 관련 선별 적용
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"

[workspace.lints.rust]
missing_docs = "warn"
unsafe_code = "deny"
