[package]
name = "prelik"
version.workspace = true
edition.workspace = true

[[bin]]
name = "prelik"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
prelik-core = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
dialoguer = { workspace = true }
clap_complete = { workspace = true }
