[package]
name = "pxi"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "pxi"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
pxi-core = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
dialoguer = { workspace = true }
clap_complete = { workspace = true }
