[package]
name = "pxi-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }

[build-dependencies]
hardcoded-lint = { path = "../../../hardcoded-lint" }
