[package]
name = "pxi-ai"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "pxi-ai"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
pxi-core = { workspace = true }
dirs = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
