[package]
name = "pxi-bootstrap"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "pxi-bootstrap"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
pxi-core = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
