[package]
name = "pxi-chrome-browser-dev"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "pxi-chrome-browser-dev"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
anyhow = { workspace = true }
pxi-core = { workspace = true }
serde_json = { workspace = true }
