[package]
name = "pxi-cloudflare"
version.workspace = true
edition.workspace = true

[[bin]]
name = "pxi-cloudflare"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
pxi-core = { workspace = true }
dirs = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
