[package]
name = "prelik-deploy"
version.workspace = true
edition.workspace = true

[[bin]]
name = "prelik-deploy"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
prelik-core = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
