[package]
name = "pxi-deploy"
version.workspace = true
edition.workspace = true

[[bin]]
name = "pxi-deploy"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
pxi-core = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
