[package]
name = "prelik-license"
version.workspace = true
edition.workspace = true

[[bin]]
name = "prelik-license"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
prelik-core = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ureq = { version = "2", features = ["json"] }
