[package]
name = "pxi-lxc"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "pxi-lxc"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
pxi-core = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
