[package]
name = "pxi-traefik"
version.workspace = true
edition.workspace = true

[[bin]]
name = "pxi-traefik"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
pxi-core = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
